--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <ul>
     <li><a href="examples/line-chart/">Line Chart Example</a></li>
     <li><a href="examples/bar-chart/">Bar Chart Example</a></li>
+    <li><a href="/examples/shared/xy-comparing-series-google-analytics-style/">xy-comparing-series-google-analytics-style</a></li>
+    <li><a href="/examples/shared/timeline-linear-process-diagram/">timeline-linear-process-diagram</a></li>
   </ul>
 </body>
 </html>
