--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My amCharts5 Custom Page</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>My amCharts 5 Demo</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 2em; }
+    h1 { color: #333; }
+    ul { line-height: 1.8; }
+    a { color: #0066cc; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My amCharts 5 Demo</h1>
-  <p>This site shows the original amCharts 5 examples plus my new work.</p>
+  <h1>amCharts 5 Examples</h1>
+  <p>Click an example below to run it directly from this site:</p>
   <ul>
-    <li><a href="examples/line-chart/">Line Chart Example</a></li>
-    <li><a href="examples/bar-chart/">Bar Chart Example</a></li>
-    <li><a href="examples/shared/xy-comparing-series-google-analytics-style/">xy-comparing-series-google-analytics-style</a></li>
-    <li><a href="/examples/shared/timeline-linear-process-diagram/">timeline-linear-process-diagram</a></li>
+    <li>
+      <a href="examples/shared/timeline-linear-process-diagram/">timeline-linear-process-diagram</a>
+    </li>
+    <li>
+      <a href="examples/shared/xy-comparing-series-google-analytics-style/">xy-comparing-series-google-analytics-style</a>
+    </li>
+    <!-- Add more examples here using the same format -->
   </ul>
 </body>
 </html>
